// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should handle context properties Should handle setting properties 1`] = `
Object {
  "fillStyle": "orange",
  "font": "10px sans-serif",
  "globalAlpha": 0.7,
  "globalCompositeOperation": "source-over",
  "imageSmoothingEnabled": false,
  "imageSmoothingQuality": "low",
  "lineCap": "butt",
  "lineDashOffset": 0,
  "lineJoin": "miter",
  "lineWidth": 1,
  "miterLimit": 10,
  "shadowBlur": 0.8,
  "shadowColor": "#000000",
  "shadowOffsetX": 0,
  "shadowOffsetY": 0,
  "strokeStyle": "yellow",
  "textAlign": "start",
  "textBaseline": "alphabetic",
}
`;

exports[`Should handle context properties Should handle setting properties 2`] = `
Object {
  "fillStyle": "orange",
  "font": "10px sans-serif",
  "globalAlpha": 0.7,
  "globalCompositeOperation": "source-over",
  "imageSmoothingEnabled": false,
  "imageSmoothingQuality": "low",
  "lineCap": "butt",
  "lineDashOffset": 0,
  "lineJoin": "miter",
  "lineWidth": 1,
  "miterLimit": 10,
  "shadowBlur": 0.8,
  "shadowColor": "#000000",
  "shadowOffsetX": 0,
  "shadowOffsetY": 0,
  "strokeStyle": "#000000",
  "textAlign": "start",
  "textBaseline": "alphabetic",
}
`;

exports[`Should handle pushing and popping Should handle pushing and popping properties 1`] = `
Object {
  "fillStyle": "red",
  "font": "20px Arial",
  "globalAlpha": 0.5,
  "globalCompositeOperation": "source-in",
  "imageSmoothingEnabled": true,
  "imageSmoothingQuality": "high",
  "lineCap": "round",
  "lineDashOffset": 2,
  "lineJoin": "bevel",
  "lineWidth": 3,
  "miterLimit": 4,
  "shadowBlur": 0.6,
  "shadowColor": "blue",
  "shadowOffsetX": 10,
  "shadowOffsetY": 20,
  "strokeStyle": "green",
  "textAlign": "center",
  "textBaseline": "bottom",
}
`;

exports[`Should handle pushing and popping Should handle pushing and popping properties 2`] = `
Object {
  "fillStyle": "red",
  "font": "20px Arial",
  "globalAlpha": 0.5,
  "globalCompositeOperation": "source-in",
  "imageSmoothingEnabled": true,
  "imageSmoothingQuality": "high",
  "lineCap": "round",
  "lineDashOffset": 2,
  "lineJoin": "bevel",
  "lineWidth": 3,
  "miterLimit": 4,
  "shadowBlur": 0.6,
  "shadowColor": "blue",
  "shadowOffsetX": 10,
  "shadowOffsetY": 20,
  "strokeStyle": "green",
  "textAlign": "center",
  "textBaseline": "bottom",
}
`;
